feat: Adiciona GET para retornar todas Reserves
